[package]
name = "ws-endpoint-monitor"
description = "WebSocket endpoint monitor for Substrate-based blockchain nodes with Prometheus metrics"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/rbochenek/ws-endpoint-monitor"
keywords = ["substrate", "node", "websocket", "prometheus"]

[dependencies]
actix-web = "4.11"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
prometheus = "0.14"
jsonrpsee = { version = "0.25", features = ["client"] }
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
